fix model spacing

--- a/styles.css
+++ b/styles.css
@@ -289,7 +289,7 @@ h2 {
 /* ===============
    Modal Styles
 ================ */
-/* Remove default dialog styles */
+
 dialog {
   position: fixed;
 
@@ -305,22 +305,23 @@ dialog {
 }
 
 #task-modal {
-  top: 40%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -40%);
+  transform: translate(-50%, -50%);
+
   border-radius: 8px;
   width: 90%;
-  max-width: 600px;
+  max-width: 480px; 
   padding: 24px;
+
   background-color: #fff;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-  /*font-family: "Plus Jakarta Sans", sans-serif;*/
 }
 
 .modal-window {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 20px;
 
   background-color: white;
   padding: 24px;
@@ -334,6 +335,13 @@ dialog {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+#task-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .modal-overlay::backdrop {
   background: rgba(0, 0, 0, 0.4);
 }
@@ -347,6 +355,7 @@ dialog {
   font-weight: 700;
   font-size: 13px;
   cursor: pointer;
+  margin-top: 16px;
 }
 
 .submit-btn:hover {
@@ -413,21 +422,18 @@ form label {
   display: block;
   font-weight: 600;
   font-size: 0.75em;
-  margin-top: 12px;
-  margin-bottom: 4px;
+  margin-top: 16px;  
+  margin-bottom: 6px;
   color: #828fa3;
 }
 
-form input,
-form textarea,
-form select {
-  width: 100%;
-  padding: 8px 10px;
+input,
+textarea,
+select {
+  padding: 12px;
+  border-radius: 6px;
   border: 1px solid #828fa3;
-  border-radius: 4px;
-  font-family: inherit;
-  font-size: 0.8125em;
-  resize: vertical;
+  font-size: 14px;
 }
 
 form select {
@@ -447,6 +453,19 @@ body.dark {
   --secondary-color: #20212c;
   --primary-font-color: #ffffff;
   --secondary-font-color: #828fa3;
+}
+
+body.dark #task-modal {
+  background-color: #2b2c37;
+  color: white;
+}
+
+body.dark input,
+body.dark textarea,
+body.dark select {
+  background-color: #20212c;
+  color: white;
+  border: 1px solid #3e3f4e;
 }
 
 /* smoother transition */
